Showing git to Christian

--- a/buyaware/templates/base.html
+++ b/buyaware/templates/base.html
@@ -94,10 +94,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="{% static "img/logo.png" %}" alt="">
+		    
                     <div class="intro-text">
                         <span class="skills">Make a choice you can believe in.</span>
-                        <hr class="check-light">
-                        <!-- span class="skills">Web Developer - Graphic Artist - User Experience Designer</span!-->
                     </div>
                 </div>
             </div>
@@ -120,7 +119,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="check-primary">
+                   
                 </div>
             </div>
             <div class="row">
@@ -141,7 +140,7 @@
 	<div class="row">
 	  <div class="col-lg-12 text-center">
             <h2>Meet the team</h2>
-            <hr class="check-light">
+            
           </div>
 	  <div class="row">
 	    <div class="col-lg-12 text-center">
@@ -152,17 +151,17 @@
 	    <div class="col-lg-4 text-center">
 	      <img src="{% static "img/profiles/jonas.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Jonas Niederberger</h4>
-	      <p>The big boss</p>
+	      <p></p>
 	    </div>
 	    <div class="col-lg-4 text-center">
 	      <img src="{% static "img/profiles/patrick.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Patrick Weber</h4>
-	      <p>Rating expert</p>
+	      <p></p>
 	    </div>
 	    <div class="col-lg-4 text-center">
 	      <img src="{% static "img/profiles/eric.jpg" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Eric Brunner</h4>
-	      <p>IT specialist</p>
+	      <p></p>
 	    </div>
 	  </div>
 	  <div class="row">
@@ -174,12 +173,12 @@
 	    <div class="col-lg-4 text-center col-lg-offset-2">
 	      <img src="{% static "img/profiles/petra.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Petra Balbi</h4>
-	      <p>PR advisor</p>
+	      <p></p>
 	    </div>
 	    <div class="col-lg-4 text-center">
 	      <img src="{% static "img/profiles/christian.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Christian Küttel</h4>
-	      <p>IT consultant</p>
+	      <p></p>
 	    </div>
 	  </div>
 	</div>
@@ -192,7 +191,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contact Us</h2>
-                    <hr class="check-primary">
+                   
                 </div>
             </div>
             <div class="row">
@@ -236,6 +235,7 @@
                             </div>
                         </div>
                     </form>
+		    <p class="text-center"> info@buyaware.org </p> 
                 </div>
             </div>
         </div>
