--- a/home/templates/home/home_de.html
+++ b/home/templates/home/home_de.html
@@ -1,46 +1,9 @@
+{% extends "base.html" %}
+
 {% load staticfiles %}
 
-<!DOCTYPE html>
-
-<html lang={% block language %} "en" {% endblock %}>
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>BuyAware - Home Page</title>
-
-    <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="{% static "css/freelancer.css" %}" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="{% static "font-awesome/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body id="page-top" class="index">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-        {% block navbar %}
-            <!-- Brand and toggle get grouped for better mobile display -->
+{% block navbar %}
+ <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -59,23 +22,23 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">Über uns</a>
                     </li>
 		     <li class="page-scroll">
                         <a href="#team">Team</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Kontakt</a>
                     </li>
 		    <li>
 		      <!-- Split button -->
 		      <div class="button-group">
-			<button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> EN
+			<button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> DE
 			  <span class="caret"></span>
 			  <span class="sr-only">Toggle Dropdown</span>
 			</button>
 			<ul class="dropdown-menu">
-			  <li><a href="#de">DE</a></li>
+			  <li><a href="{% url 'home:home_en' %}">EN</a></li>
 			  <li><a href="#fr">FR</a></li>
 			</ul>
 		      </div>
@@ -83,20 +46,17 @@
               </ul>
             </div>
             <!-- /.navbar-collapse -->
-            {% endblock %}
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
+{% endblock %}
 
-    {% block content %}
+ {% block content %}
     <!-- Header -->
     <header>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="{% static "/home/img/logo.png" %}" alt="">
+                    <img class="img-responsive" src="{% static "img/logo.png" %}" alt="">
                     <div class="intro-text">
-                        <span class="skills">Make a choice you can believe in.</span>
+                        <span class="skills">Intelligenter slogan.</span>
                         <hr class="check-light">
                         <!-- span class="skills">Web Developer - Graphic Artist - User Experience Designer</span!-->
                     </div>
@@ -120,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Über uns</h2>
                     <hr class="check-primary">
                 </div>
             </div>
@@ -141,7 +101,7 @@
       <div class="container">
 	<div class="row">
 	  <div class="col-lg-12 text-center">
-            <h2>Meet the team</h2>
+            <h2>Das Team</h2>
             <hr class="check-light">
           </div>
 	  <div class="row">
@@ -151,17 +111,17 @@
 	  </div>
 	  <div class="row">
 	    <div class="col-lg-4 text-center">
-	      <img src="img/profiles/jonas.png" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
+	      <img src="{% static "img/profiles/jonas.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Jonas Niederberger</h4>
 	      <p>The big boss</p>
 	    </div>
 	    <div class="col-lg-4 text-center">
-	      <img src="img/profiles/patrick.png" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
+	      <img src="{% static "img/profiles/patrick.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Patrick Weber</h4>
 	      <p>Rating expert</p>
 	    </div>
 	    <div class="col-lg-4 text-center">
-	      <img src="img/profiles/eric.jpg" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
+	      <img src="{% static "img/profiles/eric.jpg" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Eric Brunner</h4>
 	      <p>IT specialist</p>
 	    </div>
@@ -173,12 +133,12 @@
 	  </div>
 	  <div class="row">
 	    <div class="col-lg-4 text-center col-lg-offset-2">
-	      <img src="img/profiles/petra.png" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
+	      <img src="{% static "img/profiles/petra.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Petra Balbi</h4>
 	      <p>PR advisor</p>
 	    </div>
 	    <div class="col-lg-4 text-center">
-	      <img src="img/profiles/christian.png" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
+	      <img src="{% static "img/profiles/christian.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Christian Küttel</h4>
 	      <p>IT consultant</p>
 	    </div>
@@ -192,7 +152,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Us</h2>
+                    <h2>Kontakt</h2>
                     <hr class="check-primary">
                 </div>
             </div>
@@ -244,68 +204,8 @@
     
     {% endblock %}
 
-
-    <!-- Footer -->
-    <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>Switzerland</p>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="https://www.facebook.com/BuyAwareMovement/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-below">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        Copyright &copy; buyaware.org 2016
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-top page-scroll visible-xs visible-sm">
-        <a class="btn btn-primary" href="#page-top">
-            <i class="fa fa-chevron-up"></i>
-        </a>
-    </div>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.js"></script>
-
-    {% block scripts %}
+{% block scripts %}
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script src="{% static "js/jqBootstrapValidation.js" %}"></script>
+    <script src="{% static "js/contact_me.js" %}"></script>
     {% endblock %}
-    <!-- Custom Theme JavaScript -->
-    <script src="js/freelancer.js"></script>
-
-</body>
-
-</html>
