--- a/home/templates/home/home_de.html
+++ b/home/templates/home/home_de.html
@@ -113,17 +113,17 @@
 	    <div class="col-lg-4 text-center">
 	      <img src="{% static "img/profiles/jonas.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Jonas Niederberger</h4>
-	      <p>The big boss</p>
+	      
 	    </div>
 	    <div class="col-lg-4 text-center">
 	      <img src="{% static "img/profiles/patrick.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Patrick Weber</h4>
-	      <p>Rating expert</p>
+	      
 	    </div>
 	    <div class="col-lg-4 text-center">
 	      <img src="{% static "img/profiles/eric.jpg" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Eric Brunner</h4>
-	      <p>IT specialist</p>
+	      
 	    </div>
 	  </div>
 	  <div class="row">
@@ -135,12 +135,12 @@
 	    <div class="col-lg-4 text-center col-lg-offset-2">
 	      <img src="{% static "img/profiles/petra.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Petra Balbi</h4>
-	      <p>PR advisor</p>
+	      
 	    </div>
 	    <div class="col-lg-4 text-center">
 	      <img src="{% static "img/profiles/christian.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Christian Küttel</h4>
-	      <p>IT consultant</p>
+	      
 	    </div>
 	  </div>
 	</div>
@@ -178,7 +178,7 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                <input type="tel" class="form-control" placeholder="Phone Number (optional)" id="phone" >
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
