--- a/home/templates/home/home_de.html
+++ b/home/templates/home/home_de.html
@@ -11,7 +11,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Buy Aware</a>
+                <a class="navbar-brand" href="#page-top">Home</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +56,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="{% static "img/logo.png" %}" alt="">
                     <div class="intro-text">
-                        <span class="skills">Intelligenter slogan.</span>
+                        <span class="skills">Make choices you believe in.</span>
                         <hr class="check-light">
                         <!-- span class="skills">Web Developer - Graphic Artist - User Experience Designer</span!-->
                     </div>
