--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,91 +3,47 @@
 {% load i18n %}
 {% load staticfiles  %}
 
-{% block navbar %}
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#page-top">Home</a>
-            </div>
+{% block navbar_links %}
+<li class="hidden">
+  <a href="#page-top"></a>
+</li>
+<li class="page-scroll">
+  <a href="#about">{% trans "About" %}</a>
+</li>
+<li class="page-scroll">
+  <a href="#team">{% trans "Team" %}</a>
+</li>
+<li class="page-scroll">
+  <a href="#contact">{% trans "Contact" %}</a>
+</li>
+{% endblock %}
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-		     <li class="page-scroll">
-                        <a href="#team">Team</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
-                    </li>
-		    <li>
-		      <!-- Split button -->
-		      <div class="button-group">
-			{% get_available_languages as languages%}
-			{% get_current_language as CURRENT_LANGUAGE_CODE%}
-
-			<button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> {{CURRENT_LANGUAGE_CODE|upper}}
-			  <span class="caret"></span>
-			  <span class="sr-only">Toggle Dropdown</span>
-			</button>
-			<ul class="dropdown-menu">
-
-			  {% for lang_code, lang_name in languages %}
-			  {% if lang_code != CURRENT_LANGUAGE_CODE %}
-			  {% language lang_code %}
-			  <li><a href="{% url 'home:home' %}">{{lang_code|upper}}</a></li>
-			  {% endlanguage %}
-			  {% endif %}
-			  {% endfor %}
-
-			</ul>
-		      </div>
-		    </li>
-              </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-            {% endblock %}
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
-    {% block content %}
-    <!-- Header -->
-    <header>
+{% block content %}
+<!-- Header -->
+<header>
         <div class="container">
-            <div class="row">
+          <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="{% static "img/logo.png" %}" alt="">
-                    <div class="intro-text">
-                        <span class="skills">Make choices you believe in.</span>
-                        <hr class="check-light">
-                        <!-- span class="skills">Web Developer - Graphic Artist - User Experience Designer</span!-->
+                  <img class="img-responsive" src="{% static "img/logo.png" %}" alt="">
+                  <div class="intro-text">
+                    <span class="skills">Make choices you believe in.</span>
+                    <hr class="check-light">
+                    <!-- span class="skills">Web Developer - Graphic Artist - User Experience Designer</span!-->
                     </div>
                 </div>
-            </div>
-	    <div id="custom-search-input">
-              <div class="input-group col-lg-6 col-lg-offset-3">
-                <input type="text" class="  search-query form-control" placeholder="Let's get started..." />
-                <span class="input-group-btn">
-                  <button class="btn btn-danger" type="button">
-                    <span class=" glyphicon glyphicon-search"></span>
-                  </button>
-                </span>
+          </div>
+	  <div id="custom-search-input">
+            <div class="input-group col-lg-6 col-lg-offset-3">
+              <input type="text" class="  search-query form-control" placeholder="{% trans "Let's get started..." %}" />
+              <span class="input-group-btn">
+                <button class="btn btn-danger" type="button">
+                  <span class=" glyphicon glyphicon-search"></span>
+                </button>
+              </span>
               </div>
-            </div>
+          </div>
         </div>
-    </header>
+</header>
 
     <!-- About Section -->
     <section id="about">
@@ -100,10 +56,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>We are a group of students from several Swiss universities who have met at the Swiss Talent Forum 2015 in Thun, Switzerland, which is a think-tank organized by Swiss Youth in Science. It was at this event on the topic of Smart Growth &#38; Consumption that we laid the foundation stone for BuyAware.</p>
+                    <p>{% trans "We are a group of students from several Swiss universities who have met at the Swiss Talent Forum 2015 in Thun, Switzerland, which is a think-tank organized by Swiss Youth in Science. It was at this event on the topic of Smart Growth &#38; Consumption that we laid the foundation stone for BuyAware." %}</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>The objective of BuyAware is to contribute to more responsible consumption by closing information gaps in the field of electronics. By providing background data on consumer goods prior to purchasing, we want to enable more conscious, individual and reflected buying decision.</p>
+                    <p>{% trans "The objective of BuyAware is to contribute to more responsible consumption by closing information gaps in the field of electronics. By providing background data on consumer goods prior to purchasing, we want to enable more conscious, individual and reflected buying decision." %}</p>
                 </div>
             </div>
         </div>
@@ -115,7 +71,7 @@
       <div class="container">
 	<div class="row">
 	  <div class="col-lg-12 text-center">
-            <h2>Meet the team</h2>
+            <h2>{% trans "Meet the team" %}</h2>
             <hr class="check-light">
           </div>
 	  <div class="row">
@@ -166,7 +122,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Us</h2>
+                    <h2>{% trans "Contact Us" %}</h2>
                     <hr class="check-primary">
                 </div>
             </div>
@@ -177,29 +133,29 @@
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                <label>{% trans "Name" %}</label>
+                                <input type="text" class="form-control" placeholder={% trans "Name"%} id="name" required data-validation-required-message={% trans "Please enter your name."%}>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                <label>{% trans "Email Address" %}</label>
+                                <input type="email" class="form-control" placeholder={% trans "Email Address" %} id="email" required data-validation-required-message={% trans "Please enter your email address." %}>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number (optional)" id="phone">
+                                <label>{% trans "Phone Number" %}</label>
+                                <input type="tel" class="form-control" placeholder={% trans "Phone Number (optional)" %} id="phone">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <label>{% trans "Message" %}</label>
+                                <textarea rows="5" class="form-control" placeholder={% trans "Message" %} id="message" required data-validation-required-message={% trans "Please enter a message." %}></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -207,7 +163,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn btn-lg">Send</button>
+                                <button type="submit" class="btn btn btn-lg">{% trans "Send" %}</button>
                             </div>
                         </div>
                     </form>
