--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -134,28 +134,28 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>{% trans "Name" %}</label>
-                                <input type="text" class="form-control" placeholder={% trans "Name"%} id="name" required data-validation-required-message={% trans "Please enter your name."%}>
+                                <input type="text" class="form-control" placeholder="{% trans "Name"%}" id="name" required data-validation-required-message="{% trans "Please enter your name."%}">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>{% trans "Email Address" %}</label>
-                                <input type="email" class="form-control" placeholder={% trans "Email Address" %} id="email" required data-validation-required-message={% trans "Please enter your email address." %}>
+                                <input type="email" class="form-control" placeholder="{% trans "Email Address" %}" id="email" required data-validation-required-message="{% trans "Please enter your email address." %}">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>{% trans "Phone Number" %}</label>
-                                <input type="tel" class="form-control" placeholder={% trans "Phone Number (optional)" %} id="phone">
+                                <input type="tel" class="form-control" placeholder="{% trans "Phone Number (optional)" %}" id="phone">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>{% trans "Message" %}</label>
-                                <textarea rows="5" class="form-control" placeholder={% trans "Message" %} id="message" required data-validation-required-message={% trans "Please enter a message." %}></textarea>
+                                <textarea rows="5" class="form-control" placeholder="{% trans "Message" %}" id="message" required data-validation-required-message="{% trans "Please enter a message." %}"></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
