Changed language selector redirect url from {{ redirect_to }} to '/' so it works at least partially on the web page.

--- a/buyaware/templates/base.html
+++ b/buyaware/templates/base.html
@@ -64,7 +64,7 @@
 		      <div class="language_selector">
 			<form action="{% url 'set_language' %}" method="post">
 			  {% csrf_token %}
-			  <input name="next" type="hidden" value="{{ redirect_to }}" />
+			  <input name="next" type="hidden" value="/" />
 			  <select name="language">
 			  
 			  {% get_available_languages as LANGUAGES %}
