Created the about page.

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -8,7 +8,7 @@
   <a href="#page-top"></a>
 </li>
 <li class="page-scroll">
-  <a href="#about">{% trans "About" %}</a>
+  <a href="{% url 'about:about' %}">{% trans "About" %}</a>
 </li>
 <li class="page-scroll">
   <a href="#team">{% trans "Team" %}</a>
@@ -45,77 +45,6 @@
         </div>
 </header>
 
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>{% trans "About" %}</h2>
-                    <hr class="check-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>{% trans "We are a group of students from several Swiss universities who have met at the Swiss Talent Forum 2015 in Thun, Switzerland, which is a think-tank organized by Swiss Youth in Science. It was at this event on the topic of Smart Growth &#38; Consumption that we laid the foundation stone for BuyAware." %}</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>{% trans "The objective of BuyAware is to contribute to more responsible consumption by closing information gaps in the field of electronics. By providing background data on consumer goods prior to purchasing, we want to enable more conscious, individual and reflected buying decision." %}</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- Meet the team Section -->
-    <section class="success" id ="team">
-      <div class="container">
-	<div class="row">
-	  <div class="col-lg-12 text-center">
-            <h2>{% trans "Meet the team" %}</h2>
-            <hr class="check-light">
-          </div>
-	  <div class="row">
-	    <div class="col-lg-12 text-center">
-              <h3>Core Group</h3>
-            </div>
-	  </div>
-	  <div class="row">
-	    <div class="col-lg-4 text-center">
-	      <img src="{% static "img/profiles/jonas.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
-	      <h4>Jonas Niederberger</h4>
-	      
-	    </div>
-	    <div class="col-lg-4 text-center">
-	      <img src="{% static "img/profiles/patrick.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
-	      <h4>Patrick Weber</h4>
-	     
-	    </div>
-	    <div class="col-lg-4 text-center">
-	      <img src="{% static "img/profiles/eric.jpg" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
-	      <h4>Eric Brunner</h4>
-	      
-	    </div>
-	  </div>
-	  <div class="row">
-	    <div class="col-lg-12 text-center">
-              <h3>Freelancers</h3>
-            </div>
-	  </div>
-	  <div class="row">
-	    <div class="col-lg-4 text-center col-lg-offset-2">
-	      <img src="{% static "img/profiles/petra.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
-	      <h4>Petra Balbi</h4>
-	      
-	    </div>
-	    <div class="col-lg-4 text-center">
-	      <img src="{% static "img/profiles/christian.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
-	      <h4>Christian Küttel</h4>
-	      
-	    </div>
-	  </div>
-	</div>
-      </div>
-    </section>
 
     <!-- Contact Section -->
     <section id="contact">
