--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -11,9 +11,6 @@
   <a href="{% url 'about:about' %}">{% trans "About" %}</a>
 </li>
 <li class="page-scroll">
-  <a href="#team">{% trans "Team" %}</a>
-</li>
-<li class="page-scroll">
   <a href="#contact">{% trans "Contact" %}</a>
 </li>
 {% endblock %}
@@ -64,43 +61,102 @@
           </div>
 	  <div class="row">
 	    <div class="col-lg-12 text-center">
-              <h3>Core Group</h3>
+              <h3>Core Group</h3><br></br>
             </div>
 	  </div>
 	  <div class="row">
-	    <div class="col-lg-4 text-center">
+	    <div class="col-lg-3 text-center">
 	      <img src="{% static "img/profiles/jonas.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Jonas Niederberger</h4>
 	      
 	    </div>
-	    <div class="col-lg-4 text-center">
-	      <img src="{% static "img/profiles/patrick.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
-	      <h4>Patrick Weber</h4>
-	     
+		
+		<div class="col-lg-9">
+	      <h5>Jonas Niederberger is part of BuyAware’s CORE group and acts as the project coordinator. Additionally, Jonas’ responsibilities include networking with other organisations, designing our App, project development as well as PR-work. If anyone has an overview of what currently is going on in our project, it’s Jonas!
+
+"Developing a project like BuyAware alongside a very bright, enthusiastic and motivated team gives us the chance to actively be part of a movement, instead of just being a bystander. My goal is, that with BuyAware, we will get one step closer to spread global empathy and awareness."
+
+At the moment Jonas is in a gap year. This autumn he will start studying international affairs at the University of St. Gallen in the Assessment Year. He loves doing sports, especially hiking and climbing, and being in the fresh, exhilarating mountain air.
+</h5>
+	      
 	    </div>
-	    <div class="col-lg-4 text-center">
+	      </div>
+		  
+		   <div class="row">
+	    <div class="col-lg-3 text-center">
 	      <img src="{% static "img/profiles/eric.jpg" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Eric Brunner</h4>
 	      
 	    </div>
+		
+		<div class="col-lg-9" style="margin-top:50px">
+	      <h5>Eric Brunner is part of the BuyAware CORE team and concentrates mainly on the tech aspects. He’s responsible for the Web-appearance and the database of the project. Therefore: If you need to program something, Eric is definitely the right guy to talk to!
+
+"Being part of a group of young, bright students with a visionary idea is what motivates me!" 
+
+Eric spends most of his time studying at EPFL to become a mechanical engineer and he simply loves cycling.
+</h5>
+	      
+	    </div>
+	      </div>
+		  
+		   <div class="row">
+	    <div class="col-lg-3 text-center">
+	      <img src="{% static "img/profiles/patrick.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
+	      <h4>Patrick Weber</h4>
+	      
+	    </div>
+		
+		<div class="col-lg-9">
+	      <h5>Patrick Weber is part of BuyAware's CORE group. His main task consists in creating and managing the list of criteria which we will use to assess different products. Furthermore, he’s the one who designed the logo and analysed the survey we did last autumn. If you’d like to know what the mathematical background of our product assessments is: Patrick will be happy to explain!
+
+"I've always been very interested in environmental topics (especially climate change). With BuyAware I now have the possibility to actually contribute something to this myself, rather than just sitting around talking about it." 
+
+When Patrick isn't working on the BuyAware-project, he mainly spends his time at the University of Basel studying Nanoscience. In his free time, he likes playing the guitar and the drums and doing all kinds of sports, mainly football and badminton.
+</h5>
+	      
+	    </div>
+	      </div>
+		  
 	  </div>
 	  <div class="row">
 	    <div class="col-lg-12 text-center">
-              <h3>Freelancers</h3>
+              <h3>Freelancers</h3><br></br>
             </div>
 	  </div>
-	  <div class="row">
-	    <div class="col-lg-4 text-center col-lg-offset-2">
+	  
+	  	<div class="row">
+	      <div class="col-lg-3 text-center">
 	      <img src="{% static "img/profiles/petra.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Petra Balbi</h4>
 	      
 	    </div>
-	    <div class="col-lg-4 text-center">
+		
+		<div class="col-lg-9" style="margin-top:25px">
+	      <h5>Petra Balbi is a freelancer in the BuyAware team. She is primarily concentrating on gathering information for our database and conducting assessments for different products. So if you have a question concerning the information behind a product assessment, Petra will be your woman to ask.
+“I’m fascinated by how a project develops step by step and how far you can come if you are determined enough. It’s an honour to be part of such a motivated and fun team and I’m curious to where BuyAware will lead us”
+After her Gap-Year, in which she travelled a lot, Petra will start with her studies this September in Zurich. When she’s at home she likes to discover the mountains mostly on skis or but also on foot. Furthermore, she is engaged in the JUBLA, loves to dance (ballet or modern) and occasionally plays the flute.
+</h5>
+	      
+	    </div>
+	      </div>
+		  
+			   <div class="row">
+	    <div class="col-lg-3 text-center">
 	      <img src="{% static "img/profiles/christian.png" %}" alt="member's name" class="img-circle center-block" style="width:200px;height:200px;">
 	      <h4>Christian Küttel</h4>
 	      
 	    </div>
-	  </div>
+		
+		<div class="col-lg-9" style="margin-top:30px">
+	      <h5>Christian Küttel is a freelancer in the BuyAware team. So far, he has mainly been helping Eric with the programming for our database. Additionally he also was the guy who came up with the spiderweb as a means to visualise our assessment results. So if you need someone to explain how you can extract the information you want out of our product-spiderwebs, he’s certainly the guy to talk to!
+"What keeps me motivated is friends or other people who walk up to me and ask me about BuyAware and how it is developing. I also realized how much I can learn from a project like this."
+During weekdays Christian is busy studying mechanical engineering at the ETH. I also enjoys doing sports and being active in general.
+</h5>
+	      
+	    </div>
+	      </div>
+		  
 	</div>
       </div>
     </section>
